# gammastep

./: .gitignore  .gitlab-ci.yml  .travis.yml  CONTRIBUTING.md  DESIGN  Makefile.am  NEWS.md  README.md  configure.ac  gammastep.1  redshift.conf.sample
.github/ISSUE_TEMPLATE/: bug_report.md
contrib/: gammastep.spec
data/apparmor/: com.gitlab.chinstrap.gammastep.in  usr.bin.redshift.in
data/appdata/: gammastep-indicator.appdata.xml.in
data/applications/: gammastep-indicator.desktop.in  gammastep.desktop.in
data/systemd/: gammastep-indicator.service.in  gammastep.service.in
po/: POTFILES.in  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  it.po  ja.po  ka.po  lt.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  redshift.pot  ro.po  ru.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
src/: Makefile.am  colorramp.c  colorramp.h  config-ini.c  config-ini.h  gamma-drm.c  gamma-drm.h  gamma-dummy.c  gamma-dummy.h  gamma-randr.c  gamma-randr.h  gamma-vidmode.c  gamma-vidmode.h  gamma-wl.c  gamma-wl.h  hooks.c  hooks.h  location-geoclue2.c  location-geoclue2.h  location-manual.c  location-manual.h  options.c  options.h  os-compatibility.c  pipeutils.c  pipeutils.h  redshift.c  redshift.h  signals.c  signals.h  solar.c  solar.h  systemtime.c  systemtime.h
src/gammastep_indicator/: Makefile.am  controller.py  defs.py.in  gammastep-indicator.in  statusicon.py  utils.py
src/redshift-gtk/: defs.py.in  redshift-gtk.in
